feat: add Google Drive integration for PDF report export
- Add Google Drive OAuth2 authentication
- Implement one-click PDF upload to Drive
- Create GoogleDriveManager utility class
- Add Upload to Google Drive button in report UI
- Include comprehensive setup documentation
- Update requirements.txt with Google API dependencies
- Secure credentials with .gitignore updates

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@
 /*.pb
 /*.onnx
 
+# Google Drive API credentials (IMPORTANT: Never commit these!)
+credentials.json
+token.pickle
+client_secret*.json
+
 # Caches and logs
 /.cache/
 /.cache/
