--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,10 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 Werkzeug==3.1.3
+google-auth==2.35.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
+google-api-python-client==2.149.0
 wfdb==4.3.0
 yarl==1.22.0
 
